--- a/src/components/TodoForm/styles.css
+++ b/src/components/TodoForm/styles.css
@@ -6,3 +6,11 @@ input {
 input:focus {
   outline: none;
 }
+
+.add-btn {
+  height: 31px;
+  border-radius: 5px;
+  background-color: #6bb9f0;
+  color: white;
+  font-size: 1em;
+}
