--- a/src/components/TodoList/styles.css
+++ b/src/components/TodoList/styles.css
@@ -4,12 +4,37 @@
   margin-top: 5px;
 }
 
+.input {
+  height: 25px;
+}
+
+input::placeholder {
+  font-size: 1.2em;
+}
+
 .list-item {
   display: flex;
   flex-flow: row nowrap;
 }
+
 .complete {
   text-decoration: line-through;
+}
+
+.clear-btn {
+  height: 31px;
+  border-radius: 5px;
+  background-color: #26a65b;
+  color: white;
+  font-size: 1em;
+}
+
+.delete-btn {
+  height: 31px;
+  border-radius: 5px;
+  background-color: #f22613;
+  color: white;
+  font-size: 1em;
 }
 
 .btn-group {
